--- a/stylesheets/mobile_style.css
+++ b/stylesheets/mobile_style.css
@@ -696,13 +696,18 @@ body {
     width: 100%;
     top: 0;
     left: 0;
+
 }
 .introduction h1.ui.inverted {
     font-size: 40px;
     padding-top: 40px;
 }
 .masthead .bg-top {
-    height: 500px
+    height: 300px
+}
+
+.introduction {
+    height: 300px;
 }
 .introduction .item {
     display: -webkit-box;
